--- a/scripts/components/road/tpls/specialwork/roadNameTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameTpl.htm
@@ -1,24 +1,24 @@
 <div ng-controller="RoadNameCtl">
-    <div class="fm-panel">
-        <div class="content fm-table-content fm-fitsize dark scroll-styled" style="top:0px;bottom: 70px">
-	        <div class="table-header" style="margin:10px 0px 10px 0px">
-        		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
-	            <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
-	            <button type="button" class="btn btn-shape" ng-click="openSplitSubModal('split')">拆分</button>
-	        	<button type="button" class="btn btn-shape" ng-click="openSubModal('check')">检查 </button>
-		        <div class="pull-right btn-group dropdown" uib-dropdown on-toggle="toggled(open)" auto-close="outsideClick">
-		            <button type="button" class="btn dropdown-toggle btn-xs fm-xs-btn" style="height:33px;width:36px;" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
-		                <i class="glyphicon glyphicon-th icon-th"></i> <span class="caret"></span>
-		            </button>
-		            <ul class="dropdown-menu dropdown-menu-right fm-dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-		                <li ng-repeat="col in cols">
-		                    <label class="checkbox-inline">
-		                        <input type="checkbox" ng-model-options="{getterSetter: true}" ng-model="col.show"/> {{col.title}}
-		                    </label>
-		                </li>
-		            </ul>
-		        </div>
+    <!-- <div class="fm-panel"> -->
+    	<div class="table-header" style="margin:20px 15px 20px 5px">
+       		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
+            <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
+            <button type="button" class="btn btn-shape" ng-click="openSplitSubModal('split')">拆分</button>
+        	<button type="button" class="btn btn-shape" ng-click="openSubModal('check')">检查 </button>
+	        <div class="pull-right btn-group dropdown" sytle="position:fixed;right:0px;width:100%;" uib-dropdown on-toggle="toggled(open)" auto-close="outsideClick">
+	            <button type="button" class="btn dropdown-toggle btn-xs btn-shape" style="height:33px;width:50px;" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
+	                <i class="glyphicon glyphicon-th icon-th"></i> <span class="caret"></span>
+	            </button>
+	            <ul class="dropdown-menu dropdown-menu-right fm-dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
+	                <li ng-repeat="col in cols">
+	                    <label class="checkbox-inline">
+	                        <input type="checkbox" ng-model-options="{getterSetter: true}" ng-model="col.show"/> {{col.title}}
+	                    </label>
+	                </li>
+	            </ul>
 	        </div>
+        </div>
+        <div class="content fm-table-content fm-fitsize dark scroll-styled" style="top:70px;bottom: 70px">
             <script type="text/ng-template" id="headerCheckbox.html">
                  <input type="checkbox" ng-model="checkboxes.checked" class="select-all" value=""/>
             </script>
@@ -35,11 +35,11 @@
                 <tr class="text-center" ng-show="!$data.length"><td colspan="{{(cols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
             </table>
         </div>
-		<div ng-show="editPanel" class="div-float" style="top:20px;left:20px;width:1000px;border-radius:5px;">
+		<div ng-show="editPanel" drag class="div-float" style="top:20px;left:20px;width:800px;border-radius:5px;">
 	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditPanel()"><span>&times;</span></button>
 	        <div ng-include="roadNameEditPanelTpl"></div>
 	    </div>
-	    <div ng-show="subModal" class="div-float" style="top:80px;left:120px;min-width:600px;max-width:1000px;border-radius:5px;">
+	    <div ng-show="subModal" class="div-float" style="top:80px;left:120px;min-width:600px;max-width:800px;border-radius:5px;">
 	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeSubModal()"><span>&times;</span></button>
 	        <div ng-include="subModalTpl"></div>
 	    </div>
@@ -48,4 +48,4 @@
 	        <div ng-include="splitSubModalTpl"></div>
 	    </div>
     </div>
-</div>
+<!-- </div> -->
