--- a/scripts/components/road/tpls/specialwork/splitSubModalTpl.htm
+++ b/scripts/components/road/tpls/specialwork/splitSubModalTpl.htm
@@ -2,9 +2,9 @@
 	<!-- <button type="button" class="close" style="padding:0px 4px;" ng-click="closeSubModal()"><span>&times;</span></button> -->
     <div class="title">选择数据范围</div>
     <div class="content" >
-        <div style="height:150px;">
+        <div style="height:120px;">
             <div class="block">
-                <div style="margin:60px 80px">
+                <div style="margin:40px 80px">
                         <label>
                             <input type="radio" name="dataFlag" value="1" ng-model="dataFlag">
                             选中的数据
@@ -22,6 +22,6 @@
     </div>
     <div style="border-bottom: 1px solid #ddd;"></div>
     <div style="text-align:right;">
-        <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doSplit()" style="margin:6px 8px">确定</button>
+        <button type="button" class="btn btn-main" ng-click="doSplit()" style="margin:6px 8px">确定</button>
     </div>
 </div>
