--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -4,7 +4,7 @@
         <div style="height:400px;">
             <ul class="fm-ul fm-ul-form col-md-4">
                 <li>
-                    <label>道路名组ID:</label>
+                    <label>组ID:</label>
                     <div>
                     	<input type="text" class="fm-control chosen-disabled"  ng-model="roadNameData.nameGroupid" style="width:98%" ng-disabled=true>
                     	<a ng-show="nameGroupidEditable" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('nameGroup')" style="margin-left: -17px;"></a>
@@ -161,7 +161,7 @@
                     <div><input type="text" class="fm-control" ng-model="roadNameData.srcResume"></div>
                 </li>
                 <li>
-                    <label >HW信息标识:</label>
+                    <label >HW标识:</label>
                     <div>
                         <select class="fm-control" ng-model="hwInfoFlag"
                                 placeholder_text_single="'--请选择--'"
