--- a/less/editor.less
+++ b/less/editor.less
@@ -1914,4 +1914,7 @@ ul.fm-ul-insert ul li{
 ul.fm-ul-insert > li{
   margin-bottom: 5px;
 }
-
+.data-list-filter{
+  position: absolute;
+  top: 30px;
+}
