--- a/less/editor.less
+++ b/less/editor.less
@@ -280,6 +280,10 @@ a{
     padding: 5px;
     overflow: auto;
   }
+  & > div.footer {
+    padding: 6px 8px;
+    border-top: 1px solid #ddd;
+   }
 }
 ul.fm-ul {
   list-style: none;
@@ -1671,11 +1675,14 @@ form input[type=checkbox].ng-dirty:before {
   font-size: 12px;
   padding: 2px 4px;
 }
-/**************************************/
+.btn-ls{
+  line-height: 1.0em;
+}
+/****************** 精编样式begin ********************/
 .testView{
   height: 100%;
   width: 100%;
-  background-color: red;
+  background-color: black;
   position: absolute;
   left: 0px;
   top:0px;
@@ -1692,7 +1699,17 @@ form input[type=checkbox].ng-dirty:before {
   right: 0;
   overflow-y: hidden;
 }
-/**************************************/
+.footerPotistion{
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  text-align: right
+}
+/******************* 精编样式end *******************/
+.pointer{
+  cursor: pointer;
+}
 .fm-subtable-content {
   width: 100%;
   padding-left: 5px;
