--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -206,6 +206,10 @@ a:hover {
   padding: 5px;
   overflow: auto;
 }
+.fm-panel > div.footer {
+  padding: 6px 8px;
+  border-top: 1px solid #ddd;
+}
 ul.fm-ul {
   list-style: none;
   padding: 0px;
@@ -1690,7 +1694,10 @@ form input[type=checkbox].ng-dirty:before {
   font-size: 12px;
   padding: 2px 4px;
 }
-/**************************************/
+.btn-ls {
+  line-height: 1.0em;
+}
+/****************** 精编样式begin ********************/
 .testView {
   height: 100%;
   width: 100%;
@@ -1711,7 +1718,17 @@ form input[type=checkbox].ng-dirty:before {
   right: 0;
   overflow-y: hidden;
 }
-/**************************************/
+.footerPotistion {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  text-align: right;
+}
+/******************* 精编样式end *******************/
+.pointer {
+  cursor: pointer;
+}
 .fm-subtable-content {
   width: 100%;
   padding-left: 5px;
