--- a/scripts/components/road/tpls/specialwork/roadNameTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameTpl.htm
@@ -1,6 +1,6 @@
 <div ng-controller="RoadNameCtl">
     <!-- <div class="fm-panel"> -->
-    	<div class="table-header" style="margin:20px 15px 20px 5px">
+    	<div class="table-header" style="margin:10px 13px 10px 5px">
        		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
             <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
             <button type="button" class="btn btn-shape" ng-click="openSplitSubModal('split')">拆分</button>
@@ -18,7 +18,7 @@
 	            </ul>
 	        </div>
         </div>
-        <div class="content fm-table-content fm-fitsize dark scroll-styled" style="top:70px;bottom: 70px">
+        <div class="content fm-table-content fm-fitsize dark scroll-styled" style="top:53px;bottom: 70px">
             <script type="text/ng-template" id="headerCheckbox.html">
                  <input type="checkbox" ng-model="checkboxes.checked" class="select-all" value=""/>
             </script>
@@ -36,11 +36,13 @@
             </table>
         </div>
 		<div ng-show="editPanel" drag class="div-float" style="top:20px;left:20px;width:800px;border-radius:5px;">
-	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditPanel()"><span>&times;</span></button>
+	        <button type="button"  class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditPanel()" title="关闭"><span>&times;</span></button>
+	        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
 	        <div ng-include="roadNameEditPanelTpl"></div>
 	    </div>
-	    <div ng-show="subModal" class="div-float" style="top:80px;left:120px;min-width:600px;max-width:800px;border-radius:5px;">
+	    <div ng-show="subModal" drag class="div-float" style="top:80px;left:120px;min-width:600px;max-width:800px;border-radius:5px;">
 	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeSubModal()"><span>&times;</span></button>
+	        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
 	        <div ng-include="subModalTpl"></div>
 	    </div>
 	    <div ng-show="splitSubModal" class="div-float" style="top:80px;left:120px;border-radius:5px;">
