--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -48,7 +48,7 @@ a:hover {
   position: absolute;
 }
 .text-success {
-  color: #34B734;
+  color: #34b734;
 }
 .text-muted {
   color: #A2A2A2;
@@ -82,7 +82,7 @@ a:hover {
   width: 100%;
 }
 .fill-azure {
-  background: #49A7DA;
+  background: #49a7da;
 }
 .pin-left {
   top: 0;
@@ -185,7 +185,7 @@ a:hover {
 .fm-tabs a.tab.active {
   color: #fff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
-  background-color: #555;
+  background-color: #555555;
   transition: all .3s;
 }
 .fm-panel {
@@ -195,7 +195,7 @@ a:hover {
   opacity: 1;
   margin-bottom: 10px;
   color: #fff;
-  background-color: #555;
+  background-color: #555555;
 }
 .fm-panel > div.title {
   padding: 6px 8px;
@@ -232,7 +232,7 @@ ul.fm-ul > li div {
   margin: 0;
 }
 ul.fm-ul-form > li > label {
-  color: #F3F6FA;
+  color: #f3f6fa;
   font-weight: normal;
   width: 25%;
 }
@@ -246,12 +246,12 @@ ul.fm-ul-form > li > div > label {
   margin: 2px 5px;
 }
 ul.fm-ul-list > li > label {
-  color: #F3F6FA;
+  color: #f3f6fa;
   font-weight: normal;
   width: 40%;
 }
 ul.fm-ul-list > li > div:first-child {
-  color: #F3F6FA;
+  color: #f3f6fa;
   font-weight: normal;
   width: 75%;
 }
@@ -263,30 +263,30 @@ input.fm-control {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   width: 100%;
-  color: #F3F6FA;
+  color: #f3f6fa;
   padding: 1px 5px;
   border: 1px ridge #FFFFFF;
-  background-color: #333;
+  background-color: #333333;
 }
 select.fm-control {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   width: 100%;
-  color: #F3F6FA;
+  color: #f3f6fa;
   padding: 1px 5px;
   border: 1px ridge #FFFFFF;
-  background-color: #333;
+  background-color: #333333;
 }
 textarea.fm-control {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   width: 100%;
-  color: #F3F6FA;
+  color: #f3f6fa;
   padding: 1px 5px;
   border: 1px ridge #FFFFFF;
-  background-color: #333;
+  background-color: #333333;
 }
 label.fm-control {
   margin: 2px 5px;
@@ -345,9 +345,9 @@ label > input[type='checkbox'] {
   padding-top: 6px;
   padding-bottom: 7px;
   background-color: #333;
-  box-shadow: 4px 4px 7px 0px #777;
-  -webkit-box-shadow: 4px 4px 7px 0px #777;
-  -moz-box-shadow: 4px 4px 7px 0px #777;
+  box-shadow: 4px 4px 7px 0px #777777;
+  -webkit-box-shadow: 4px 4px 7px 0px #777777;
+  -moz-box-shadow: 4px 4px 7px 0px #777777;
   min-width: 60%;
   min-height: 193px;
   width: 70%;
@@ -366,7 +366,7 @@ label > input[type='checkbox'] {
 .fm-pic-show .fm-pic-show-well .fm-img-well {
   float: left;
   padding: 3px;
-  border: solid 1px #F3F6FA;
+  border: solid 1px #f3f6fa;
   border-radius: 4px;
   margin: 4px;
   cursor: pointer;
@@ -462,7 +462,7 @@ label > input[type='checkbox'] {
   right: 10px;
 }
 .fm-flag-ico > .glyphicon-ok {
-  color: #34B734;
+  color: #34b734;
 }
 .fm-flag-ico > .glyphicon-remove {
   color: #FF3252;
@@ -657,7 +657,7 @@ a.fm-panel-controlArrowRight > span {
   height: 100%;
   background-color: #313131;
   padding: 10px;
-  border: 1px solid #555;
+  border: 1px solid #555555;
 }
 .dragAble {
   top: 0;
@@ -724,43 +724,43 @@ a.fm-panel-controlArrowRight > span {
 }
 .chosen-container .chosen-results {
   max-height: 120px;
-  color: #F3F6FA;
+  color: #f3f6fa;
 }
 .chosen-container .chosen-results li {
   padding: 2px 6px;
 }
 .chosen-container .chosen-results li.no-results {
-  color: #F3F6FA;
-  background: #333;
+  color: #f3f6fa;
+  background: #333333;
 }
 .chosen-container .chosen-drop {
-  background-color: #333;
+  background-color: #333333;
 }
 .chosen-container-single .chosen-default {
-  color: #F3F6FA;
-  background-color: #333;
+  color: #f3f6fa;
+  background-color: #333333;
 }
 .chosen-container-single .chosen-single {
-  box-shadow: 0 1px 0 #333 inset;
-  -webkit-box-shadow: 0 1px 0 #333 inset;
-  -moz-box-shadow: 0 1px 0 #333 inset;
+  box-shadow: 0 1px 0 #333333 inset;
+  -webkit-box-shadow: 0 1px 0 #333333 inset;
+  -moz-box-shadow: 0 1px 0 #333333 inset;
   padding: 0 5px;
-  color: #F3F6FA;
-  background-image: linear-gradient(#333 100%, #333 100%);
+  color: #f3f6fa;
+  background-image: linear-gradient(#333333 100%, #333333 100%);
   height: 22px;
 }
 .chosen-container-single > span {
   margin-top: -2px;
 }
 .chosen-container-active.chosen-with-drop .chosen-single {
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #333), color-stop(80%, #333));
-  color: #F3F6FA;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #333333), color-stop(80%, #333333));
+  color: #f3f6fa;
 }
 .chosen-container-active.chosen-with-drop .chosen-single {
-  box-shadow: 0 1px 0 #333 inset;
-  -webkit-box-shadow: 0 1px 0 #333 inset;
-  -moz-box-shadow: 0 1px 0 #333 inset;
-  background-image: linear-gradient(#333 100%, #333 100%);
+  box-shadow: 0 1px 0 #333333 inset;
+  -webkit-box-shadow: 0 1px 0 #333333 inset;
+  -moz-box-shadow: 0 1px 0 #333333 inset;
+  background-image: linear-gradient(#333333 100%, #333333 100%);
 }
 .tel-empty {
   border: solid #ff8888 1px !important;
@@ -776,7 +776,7 @@ a.fm-panel-controlArrowRight > span {
 .panel-tips {
   -webkit-font-smoothing: antialiased;
   line-height: 1.42857143;
-  background-color: #555;
+  background-color: #555555;
   margin-bottom: 0;
   width: 100%;
 }
@@ -794,7 +794,7 @@ a.fm-panel-controlArrowRight > span {
   border-radius: 3px;
   height: 200px;
   margin-bottom: 10px;
-  background-color: #555;
+  background-color: #555555;
   cursor: pointer;
 }
 .img-preview {
@@ -811,7 +811,7 @@ a.fm-panel-controlArrowRight > span {
   position: absolute;
   color: #fff;
   height: 100%;
-  background-color: #555;
+  background-color: #555555;
   opacity: .8;
   width: 20px;
   border: 0;
@@ -825,7 +825,7 @@ a.fm-panel-controlArrowRight > span {
   position: absolute;
   color: #fff;
   height: 100%;
-  background-color: #555;
+  background-color: #555555;
   opacity: .8;
   width: 20px;
   border: 0;
@@ -1266,7 +1266,7 @@ a.fm-panel-controlArrowRight > span {
 .fm-dropdown-menu > li > a:focus {
   color: #e5e5e5;
   background-color: #1D1B1B;
-  background-image: linear-gradient(to bottom, #1F1E1E 0%, #1F1E1E 100%);
+  background-image: linear-gradient(to bottom, #1f1e1e 0%, #1f1e1e 100%);
 }
 .dropdown-menu-name {
   margin-left: -10px;
@@ -1366,10 +1366,10 @@ a.fm-panel-controlArrowRight > span {
 }
 .btn.btn-purple:hover {
   color: #FFF;
-  background: #49A7DA;
+  background: #49a7da;
 }
 .btn.btn-purple.active {
-  background: #49A7DA;
+  background: #49a7da;
 }
 .btn.btn-purple:focus {
   box-shadow: none;
@@ -1403,36 +1403,36 @@ a.fm-panel-controlArrowRight > span {
 .btn-shape-cap {
   background-color: rgba(119, 119, 119, 0.8);
   color: #ccc;
-  border: 1px solid #555;
+  border: 1px solid #555555;
 }
 .btn-shape-cap:hover,
 .btn-shape-cap:focus {
   color: #fff;
 }
 .btn-shape-cap.active {
-  background-color: #555;
+  background-color: #555555;
   color: #fff;
 }
 .btn-shape {
   background-color: rgba(119, 119, 119, 0.8);
   color: #ddd;
-  border: 1px solid #555;
+  border: 1px solid #555555;
 }
 .btn-shape:hover,
 .btn-shape:focus {
   color: #fff;
 }
 .btn-shape.active {
-  background-color: #333;
+  background-color: #333333;
   color: #fff;
 }
 .shape-well {
-  background: #555;
+  background: #555555;
   padding: 5px;
 }
 .btn-feat {
   border-radius: 0 !important;
-  border: 1px solid #555;
+  border: 1px solid #555555;
   background: #777;
   color: #ddd;
 }
@@ -1441,7 +1441,7 @@ a.fm-panel-controlArrowRight > span {
   color: #fff;
 }
 .btn-feat.active {
-  background-color: #333;
+  background-color: #333333;
   color: #fff;
 }
 /*分页样式*/
@@ -1487,9 +1487,9 @@ form input[type=checkbox].ng-dirty:before {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  background: -moz-radial-gradient(50% 50%, #fff, #000);
-  background: -webkit-radial-gradient(50% 50%, #fff, #000);
-  background: -webkit-gradient(radial, 0 50%, 0 50%, from(#fff), to(#000));
+  background: -moz-radial-gradient(50% 50%, #ffffff, #000000);
+  background: -webkit-radial-gradient(50% 50%, #ffffff, #000000);
+  background: -webkit-gradient(radial, 0 50%, 0 50%, from(#ffffff), to(#000000));
   opacity: 0.5;
   filter: alpha(opacity=50);
   z-index: 9999;
