编辑普通限速，限速类型下拉无数据，无法修改问题

--- a/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
@@ -21,16 +21,14 @@
         <li class="list-group-item">
             <div><label class="control-label">顺向速度</label></div>
             <div class="inline">
-                    <input type="text"
-                           placeholder="0530" id="fromSpeed"
+                    <input type="text" id="fromSpeed"
                            ng-model="oridiData.fromSpeedLimit">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">逆向速度</label></div>
             <div class="inline">
-                <input type="text"
-                       placeholder="0530" id="toSpeed"
+                <input type="text" id="toSpeed"
                        ng-model="oridiData.toSpeedLimit">
             </div>
         </li>
