--- a/scripts/components/road/tpls/attr_link_tpl/speedTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedTpl.html
@@ -8,13 +8,13 @@
             <div class="list-line"></div>
         </li>
         <li class="list-group-item" ng-repeat="item in rticData.speedlimits">
-            <div ng-if="item.fromSpeedLimit!=0 && item.toSpeedLimit == 0&&item.speedType==0" ng-click="showOridinarySpeedInfo(item)" style="cursor: pointer;padding-left: 15px;"><label style="padding-top: 5px;cursor: pointer;" class="control-label">顺向速度&nbsp;{{item.fromSpeedLimit}}</label>
+            <div ng-if="item.fromSpeedLimit!=0 && item.toSpeedLimit == 0&&item.speedType==0" ng-click="showOridinarySpeedInfo(item,$index)" style="cursor: pointer;padding-left: 15px;"><label style="padding-top: 5px;cursor: pointer;" class="control-label">顺向速度&nbsp;{{item.fromSpeedLimit}}</label>
                 <!--<span id="oridinarySpeedSpan{{$index}}" class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,1)" ng-mouseleave="backColor($index,1)" ng-click="minusoridinarySpeed($index)"></span>-->
             </div>
-            <div ng-if="item.fromSpeedLimit==0 && item.toSpeedLimit != 0&&item.speedType==0" ng-click="showOridinarySpeedInfo(item)" style="cursor: pointer;padding-left: 15px;"><label style="padding-top: 5px;cursor: pointer;" class="control-label">逆向速度&nbsp;{{item.toSpeedLimit}}</label>
+            <div ng-if="item.fromSpeedLimit==0 && item.toSpeedLimit != 0&&item.speedType==0" ng-click="showOridinarySpeedInfo(item,$index)" style="cursor: pointer;padding-left: 15px;"><label style="padding-top: 5px;cursor: pointer;" class="control-label">逆向速度&nbsp;{{item.toSpeedLimit}}</label>
                 <!--<span id="oridinarySpeedSpan{{$index}}" class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,1)" ng-mouseleave="backColor($index,1)" ng-click="minusoridinarySpeed($index)"></span>-->
             </div>
-            <div ng-if="((item.fromSpeedLimit==0 && item.toSpeedLimit == 0)||(item.fromSpeedLimit!=0 && item.toSpeedLimit != 0))&&item.speedType==0" ng-click="showOridinarySpeedInfo(item)" style="cursor: pointer;padding-left: 15px; width: 200px"><label style="padding-top: 5px;cursor: pointer;" class="control-label">顺向速度&nbsp;{{item.fromSpeedLimit}}&nbsp;&nbsp;&nbsp;&nbsp;逆向速度&nbsp;{{item.toSpeedLimit}}</label>
+            <div ng-if="((item.fromSpeedLimit==0 && item.toSpeedLimit == 0)||(item.fromSpeedLimit!=0 && item.toSpeedLimit != 0))&&item.speedType==0" ng-click="showOridinarySpeedInfo(item,$index)" style="cursor: pointer;padding-left: 15px; width: 200px"><label style="padding-top: 5px;cursor: pointer;" class="control-label">顺向速度&nbsp;{{item.fromSpeedLimit}}&nbsp;&nbsp;&nbsp;&nbsp;逆向速度&nbsp;{{item.toSpeedLimit}}</label>
                 <!--<span id="oridinarySpeedSpan{{$index}}" class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,1)" ng-mouseleave="backColor($index,1)" ng-click="minusoridinarySpeed($index)"></span>-->
             </div>
         </li>
