--- a/scripts/components/road/tpls/attr_node_tpl/rwNodeTpl.html
+++ b/scripts/components/road/tpls/attr_node_tpl/rwNodeTpl.html
@@ -7,8 +7,10 @@
         <ul class="fm-ul fm-ul-form">
             <li>
                 <label>种 别</label>
-                <div ng-repeat="item in kind | filter:{id:rwNodeData.kind}">
-                    <input type="text" ng-model="item.label" disabled="disabled">
+                <div>
+                    <select  ng-model="rwNodeData.kind"
+                             ng-options="value.id as value.label for value in kind" >
+                    </select>
                 </div>
             </li>
             <li>
