加气站修改

--- a/scripts/components/poi/tpls/attr-deep/gasStationTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/gasStationTpl.html
@@ -28,8 +28,8 @@
                     <li>
                         <label>燃气类型</label>
                         <div class="block">
-                            <label ng-repeat="(key, value) in oilType">
-                                <input type="checkbox" value="{{key}}" ng-model="poi.gasstations[0].oilType[key]"> {{value}}
+                            <label ng-repeat="(key, value) in fuelTypeML">
+                                <input type="checkbox" value="{{key}}" ng-model="poi.gasstations[0].fuelType[key]"> {{value}}
                             </label>
                         </div>
                     </li>
