--- a/scripts/components/poi/tpls/attr-deep/commonDeepTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/commonDeepTpl.html
@@ -44,23 +44,23 @@
                 </ul>
             </div>
         </div>
-        <div class="fm-panel" >
-            <div class="content" style="padding-bottom: 10px;min-height: 150px">
-                <ul class="fm-ul fm-ul-form">
-                    <li style="border-bottom: 1px dashed #fff;margin-bottom: 3px;">
-                        <label style="display: block;width: 100%">营业时间列表 <span style="padding:.1em .6em .1em;font-weight: normal" class="label label-default">{{timeItems.length}} 条</span></label>
-                        <i class="glyphicon glyphicon-plus-sign pull-right" title="增加" ng-click="addBusinessHour()" aria-hidden="true"></i>
-                    </li>
-                    <li ng-repeat="timeItem in timeItems">
-                        <label style="display: block;width: 100%">营业时间[{{$index+1}}] 08::00~23:30</label>
-                        <i class="glyphicon glyphicon-edit pull-right" title="编辑" ng-click="showPopover($event,$index)" style="margin-right: 10px" aria-hidden="true"></i>
-                        <i class="glyphicon glyphicon-remove-circle pull-right" title="删除" ng-click="removeBusinessHour(timeItem,$index)" aria-hidden="true"></i>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <!--<div class="fm-panel" >-->
+            <!--<div class="content" style="padding-bottom: 10px;min-height: 150px">-->
+                <!--<ul class="fm-ul fm-ul-form">-->
+                    <!--<li style="border-bottom: 1px dashed #fff;margin-bottom: 3px;">-->
+                        <!--<label style="display: block;width: 100%">营业时间列表 <span style="padding:.1em .6em .1em;font-weight: normal" class="label label-default">{{timeItems.length}} 条</span></label>-->
+                        <!--<i class="glyphicon glyphicon-plus-sign pull-right" title="增加" ng-click="addBusinessHour()" aria-hidden="true"></i>-->
+                    <!--</li>-->
+                    <!--<li ng-repeat="timeItem in timeItems">-->
+                        <!--<label style="display: block;width: 100%">营业时间[{{$index+1}}] 08::00~23:30</label>-->
+                        <!--<i class="glyphicon glyphicon-edit pull-right" title="编辑" ng-click="showPopover($event,$index)" style="margin-right: 10px" aria-hidden="true"></i>-->
+                        <!--<i class="glyphicon glyphicon-remove-circle pull-right" title="删除" ng-click="removeBusinessHour(timeItem,$index)" aria-hidden="true"></i>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
         <!-- 时间面板 -->
-        <div ng-include="carPopoverURL" data-type="1" style="width:100%;padding: 5px 15px 5px 0;"></div>
+        <div ng-include="dayTimePopoverURL"></div>
     </div>
 </div>
 
