--- a/scripts/components/road/tpls/attr_lu_tpl/luLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luLinkTpl.html
@@ -17,6 +17,13 @@
                             </div>
                         </li>
                         <li>
+				            <label>种别</label>
+				            <div class="inline">
+				                <label ng-click="addKind()" style="cursor: pointer">编辑</label>
+				            </div>
+				
+				        </li>
+                        <li>
                             <label>图幅号</label>
                             <div>
                                 <input type="text" ng-model="luLinkData.meshId" disabled="disabled">
