--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
@@ -1,9 +1,9 @@
-<div ng-controller="normalController" class="fm-component" oncontextmenu="self.event.returnValue=false">
+<div ng-controller="normalController" class="fm-component" >
     <div class="title">
         普通交限
         <span class="label label-info">{{rdRestrictData.pid}}</span>
     </div>
-    <div class="content scroll-styled dark" style="height:90%;">
+    <div class="content scroll-styled dark" style="height:90%;" oncontextmenu="self.event.returnValue=false">
         <form name="restricOrdinaryForm">
             <div class="fm-panel">
                 <div class="content">
