--- a/scripts/components/road/tpls/specialwork/adminTableTpl.htm
+++ b/scripts/components/road/tpls/specialwork/adminTableTpl.htm
@@ -23,7 +23,7 @@
 	                        <p title="{{row[col.field]}}" ng-bind-html="col.getValue?col.getValue(this,row):row[col.field]"></p>
 	                    </td>
 	                </tr>
-	                <tr class="text-center" ng-show="!$data.length"><td colspan="{{(cols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
+	                <tr class="text-center" ng-show="!$data.length"><td colspan="{{(adminTableCols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
 	            </table>
 	        </div>
         </div>
