--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -4,33 +4,33 @@
         <div style="height:400px;">
             <ul class="fm-ul fm-ul-form col-md-4">
                 <li>
-                    <label>组ID:</label>
-                    <div>
+                    <label style="width:30%;">组ID:</label>
+                    <div >
                     	<input type="text" class="fm-control chosen-disabled"  ng-model="roadNameData.nameGroupid" style="width:98%" ng-disabled=true>
                     	<a ng-show="nameGroupidEditable" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('nameGroup')" style="margin-left: -17px;"></a>
                     </div>
                 </li>
                 <li>
-                    <label>道路名发音:</label>
+                    <label style="width:30%;">道路名发音:</label>
                     <div>
                         <input type="text" class="fm-control" ng-model="roadNameData.namePhonetic">
                     </div>
                 </li>
                 <li>
-                    <label>类型名称:</label>
+                    <label style="width:30%;">类型名称:</label>
                     <div>
                     	<input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.type" style="width:98%" ng-disabled=true>
                     	<a ng-show="typeEditable" title="搜索" class="glyphicon glyphicon-search" aria-hidden="true" ng-click="openSearchModal('type')" style="margin-left: -17px;"></a>
                     </div>
                 </li>
                 <li>
-                    <label>基本名发音:</label>
+                    <label style="width:30%;">基本名发音:</label>
                     <div>
                         <input type="text" class="fm-control" ng-model="roadNameData.basePhonetic" ng-class="{true:'chosen-disabled'}[basePhoneticDisable]" ng-disabled="typePhoneticDisable">
                     </div>
                 </li>
                 <li>
-                    <label>中缀名称:</label>
+                    <label style="width:30%;">中缀名称:</label>
                     <div>
                         <select class="fm-control"  ng-model="roadNameData.infix"
                                 placeholder_text_single="'--请选择--'"
@@ -40,18 +40,18 @@
                     </div>
                 </li>
                 <li>
-                    <label>后缀发音:</label>
+                    <label style="width:30%;">后缀发音:</label>
                     <div><input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.suffixPhonetic" ng-disabled=true></div>
                 </li>
                 <li>
-                    <label >行政区划:</label>
+                    <label style="width:30%;">行政区划:</label>
                     <div>
                     	<input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.adminName" style="width:98%" ng-disabled=true>
                     	<a ng-show="adminIdEditable" href="#" title="搜索" class="glyphicon glyphicon-search" style="margin-left: -17px;" ng-click="openSearchModal('admin')"></a>
                     </div>
                 </li>
                 <li>
-                    <label >拆分标识:</label>
+                    <label style="width:30%;">拆分标识:</label>
                     <div>
                         <select class="fm-control"  ng-model="roadNameData.splitFlag"
                                 placeholder_text_single="'--请选择--'"
@@ -63,7 +63,7 @@
             </ul>
             <ul class="fm-ul fm-ul-form col-md-4">
                 <li>
-                    <label>语言类型:</label>
+                    <label style="width:30%;">语言类型:</label>
                     <div>
                         <select class="fm-control"  ng-model="roadNameData.langCode"
                                 placeholder_text_single="'--请选择--'"
@@ -73,17 +73,17 @@
                     </div>
                 </li>
                 <li>
-                    <label>名称语音:</label>
+                    <label style="width:30%;">名称语音:</label>
                     <div>
                         <input type="text" class="fm-control" ng-model="roadNameData.voiceFile" ng-class="{true:'chosen-disabled'}[voiceFileDisable]" ng-disabled="voiceFileDisable">
                     </div>
                 </li>
                 <li>
-                    <label>类型名发音:</label>
+                    <label style="width:30%;">类型名发音:</label>
                     <div><input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.typePhonetic" ng-disabled=true></div>
                 </li>
                 <li>
-                    <label>前缀名称:</label>
+                    <label style="width:30%;">前缀名称:</label>
                     <div>
                         <select class="fm-control" ng-model="roadNameData.prefix"
                                 placeholder_text_single="'--请选择--'"
@@ -93,11 +93,11 @@
                     </div>
                 </li>
                 <li>
-                    <label>中缀发音</label>
+                    <label style="width:30%;">中缀发音:</label>
                     <div><input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.infixPhonetic" ng-disabled=true></div>
                 </li>
                 <li>
-                    <label>道路类型</label>
+                    <label style="width:30%;">道路类型:</label>
                     <div>
                         <select class="fm-control" ng-model="roadNameData.roadType"
                                 placeholder_text_single="'--请选择--'" 
@@ -107,19 +107,19 @@
                     </div>
                 </li>
                 <li>
-                    <label >路线号码</label>
+                    <label style="width:30%;">路线号码:</label>
                     <div><input type="text" class="fm-control" ng-model="roadNameData.routeId"></div>
                 </li>
             </ul>
             <ul class="fm-ul fm-ul-form col-md-4">
                 <li>
-                    <label>道路名称</label>
+                    <label style="width:30%;">道路名称:</label>
                     <div >
                         <input type="text" class="fm-control" ng-model="roadNameData.name" ng-class="{true:'chosen-disabled'}[nameDisable]" ng-disabled=nameDisable>
                     </div>
                 </li>
                 <li>
-                    <label>名称来源:</label>
+                    <label style="width:30%;">名称来源:</label>
                     <div>
                         <select class="fm-control" ng-model="roadNameData.srcFlag"
                                 placeholder_text_single="'--请选择--'"
@@ -129,15 +129,15 @@
                     </div>
                 </li>
                 <li>
-                    <label>基本名称:</label>
+                    <label style="width:30%;">基本名称:</label>
                     <div><input type="text" class="fm-control" ng-model="roadNameData.base" ng-blur="getPy($event, this, 'base', 'basePhonetic')" ng-class="{true:'chosen-disabled'}[baseDisable]" ng-disabled=baseDisable></div>
                 </li>
                 <li>
-                    <label>前缀发音:</label>
+                    <label style="width:30%;">前缀发音:</label>
                     <div><input type="text" class="fm-control chosen-disabled" ng-model="roadNameData.prefixPhonetic" ng-disabled=true></div>
                 </li>
                 <li>
-                    <label>后缀名称:</label>
+                    <label style="width:30%;">后缀名称:</label>
                     <div>
                         <select class="fm-control"  ng-model="roadNameData.suffix"
                                 placeholder_text_single="'--请选择--'"
@@ -147,7 +147,7 @@
                     </div>
                 </li>
                 <li>
-                    <label>国家编号:</label>
+                    <label style="width:30%;">国家编号:</label>
                     <div>
                         <select class="fm-control"  ng-model="roadNameData.codeType"
                                 placeholder_text_single="'--请选择--'"
@@ -157,11 +157,11 @@
                     </div>
                 </li>
                 <li>
-                    <label >来源履历:</label>
+                    <label style="width:30%;">来源履历:</label>
                     <div><input type="text" class="fm-control" ng-model="roadNameData.srcResume"></div>
                 </li>
                 <li>
-                    <label >HW标识:</label>
+                    <label style="width:30%;">HW标识:</label>
                     <div>
                         <select class="fm-control" ng-model="hwInfoFlag"
                                 placeholder_text_single="'--请选择--'"
@@ -173,7 +173,7 @@
             </ul>
             <ul class="fm-ul fm-ul-form col-md-4">
             	<li>
-                    <label >备注信息:</label>
+                    <label style="width:30%;">备注信息:</label>
                     <div><input type="text" class="fm-control" ng-model="roadNameData.memo"></div>
                 </li>
             </ul>
