--- a/scripts/components/column/tpls/chinaAddressTpl.html
+++ b/scripts/components/column/tpls/chinaAddressTpl.html
@@ -54,7 +54,7 @@
 	<div ng-class="{true:'testView',false:'testViewHiden'}[editPanelIsOpen]">
 		<div class="fm-panel">
 			<div class="title">
-				<span style="cursor: pointer" ng-click="test()">地址作业</span>
+				<span style="cursor: pointer">地址作业</span>
 				<button type="button" class="close" ng-click="closeEditPanel()" style="color: white;opacity: 1;margin: -4px 0px;"><span>&times;</span></button>
 			</div>
 			<div>
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 			<div class="footer footerPotistion" >
-				<button type="button" class="btn btn-shape btn-ls" ng-click="">保  存</button>
+				<button type="button" class="btn btn-shape btn-ls" ng-click="saveData();">保  存</button>
 			</div>
 		</div>
 	</div>
