--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -55,7 +55,7 @@
                         </li>
                         <li>
                             <label class="control-label">进入线</label>
-                            <div><input type="text" readonly ng-model="lanesData.inLinkPid"/></div>
+                            <div><input type="text" class="chosen-disabled" readonly ng-model="lanesData.inLinkPid" disabled/></div>
                         </li>
                         <li>
                             <label class="control-label">车道总数</label>
