--- a/scripts/components/road/tpls/attr_branch_Tpl/signAsRealOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/signAsRealOfBranch.html
@@ -17,13 +17,13 @@
                 <div class="d-group">
                     <div class="d-name">进入线：</div>
                     <div class="d-value">
-                        <input type="text" class="d-input rounded" placeholder="入" ng-model="diverObj.inLinkPid">
+                        <input type="text" class="d-input rounded chosen-disabled" placeholder="入" ng-model="diverObj.inLinkPid" disabled>
                     </div>
                 </div>
                 <div class="d-group">
                     <div class="d-name">退出线：</div>
                     <div class="d-value">
-                        <input type="text" class="d-input rounded" placeholder="出" ng-model="diverObj.outLinkPid">
+                        <input type="text" class="d-input rounded chosen-disabled" placeholder="出" ng-model="diverObj.outLinkPid" disabled>
                     </div>
                 </div>
                 <div class="d-group info-group">
