--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfInterTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfInterTpl.html
@@ -14,7 +14,7 @@
                         <li>
                             <label>Link{{$index+1}}号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.linkPid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.linkPid" disabled/>
                             </div>
                         </li>
                     </ul>
@@ -29,7 +29,7 @@
                         <li>
                             <label>Node{{$index+1}}号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.nodePid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.nodePid" disabled/>
                             </div>
                         </li>
                     </ul>
