--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectTpl.html
@@ -29,7 +29,7 @@
                         <li>
                             <label>Link{{$index+1}}号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.linkPid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.linkPid" disabled/>
                             </div>
                         </li>
                     </ul>
@@ -44,7 +44,7 @@
                         <li>
                             <label>道路ID{{$index+1}}</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.roadPid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.roadPid" disabled/>
                             </div>
                         </li>
                     </ul>
@@ -59,7 +59,7 @@
                         <li>
                             <label>交叉点{{$index+1}}</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.interPid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.interPid" disabled/>
                             </div>
                         </li>
                     </ul>
