警示信息和信号灯

--- a/scripts/components/road/tpls/attr_trafficSignal_tpl/trafficSignalTpl.html
+++ b/scripts/components/road/tpls/attr_trafficSignal_tpl/trafficSignalTpl.html
@@ -11,13 +11,13 @@
                         <li>
                             <label class="control-label">关联线</label>
                             <div>
-                                <input type="text" ng-model="trafficSignalData.linkPid"/>
+                                <input type="text" class="chosen-disabled" ng-model="trafficSignalData.linkPid" disabled/>
                             </div>
                         </li>
                         <li>
                             <label class="control-label">关联点</label>
                             <div>
-                                <input type="text" ng-model="trafficSignalData.nodePid"/>
+                                <input type="text" class="chosen-disabled" ng-model="trafficSignalData.nodePid" disabled/>
                             </div>
                         </li>
                         <li>
