--- a/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/warningInfoTpl.html
@@ -18,13 +18,13 @@
                     <li>
                         <label>进入线</label>
                         <div >
-                            <input type="text" readonly class="fm-control" ng-model="rdWarningInfoObj.linkPid"/>
+                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="rdWarningInfoObj.linkPid" disabled/>
                         </div>
                     </li>
                     <li>
                         <label>进入点</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="rdWarningInfoObj.nodePid"/>
+                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="rdWarningInfoObj.nodePid" disabled/>
                         </div>
                     </li>
                     <li>
@@ -92,4 +92,3 @@
     </div>
 
 </div>
-
