排查同一关系不能选中的问题，渲染接口出错 		优化保存数据重组方法 		增加查看功能 	  24小时显示三个值，0未调查 1是 ,2 否

--- a/less/editor.less
+++ b/less/editor.less
@@ -1706,6 +1706,11 @@ form input[type=checkbox].ng-dirty:before {
   width: 100%;
   text-align: right
 }
+.fm-panel .toolRight{
+  font-size: 14px;
+  cursor: pointer;
+  float: right;
+}
 /******************* 精编样式end *******************/
 .pointer{
   cursor: pointer;
