--- a/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
@@ -24,13 +24,13 @@
                         <li>
                             <label>面积</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="zoneFaceData.area" disabled="disabled">㎡
+                                <input type="text" class="fm-control chosen-disabled" ng-model="zoneFaceData.area" >㎡
                             </div>
                         </li>
                         <li>
                             <label>周长</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="zoneFaceData.perimeter" disabled="disabled">m
+                                <input type="text" class="fm-control chosen-disabled" ng-model="zoneFaceData.perimeter" >m
                             </div>
                         </li>
                     </ul>
