--- a/scripts/components/road/tpls/attr_lc_tpl/lcNodeTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcNodeTpl.html
@@ -19,7 +19,7 @@
 		                <li>
 		                    <label>图幅号</label>
 		                    <div>
-		                        <input type="text"  ng-model="lcNodeData.meshId" disabled="disabled">
+		                        <input type="text" class="chosen-disabled" ng-model="lcNodeData.meshId" >
 		                    </div>
 		                </li>
 		            </ul>
