--- a/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
@@ -26,13 +26,13 @@
                         <li>
                             <label>FACE周长</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="luFaceData.area" disabled="disabled">
+                                <input type="text" class="fm-control chosen-disabled" ng-model="luFaceData.area">
                             </div>
                         </li>
                         <li>
                             <label>图符号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="luFaceData.perimeter" disabled="disabled">
+                                <input type="text" class="fm-control chosen-disabled" ng-model="luFaceData.perimeter">
                             </div>
                         </li>
                     </ul>
