--- a/scripts/components/road/tpls/attr_lu_tpl/luLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luLinkTpl.html
@@ -26,7 +26,7 @@
                         <li>
                             <label>图幅号</label>
                             <div>
-                                <input type="text" ng-model="luLinkData.meshId" disabled="disabled">
+                                <input type="text" class="chosen-disabled" ng-model="luLinkData.meshId" >
                             </div>
                         </li>
                     </ul>
