--- a/scripts/components/road/tpls/attr_same_tpl/rdSameLinkTpl.html
+++ b/scripts/components/road/tpls/attr_same_tpl/rdSameLinkTpl.html
@@ -10,13 +10,13 @@
                     <li style="padding:5px">
                         <label>Link{{$index+1}}号码</label>
                         <div >
-                            <input type="text" readonly class="fm-control" value="{{link.linkPid}}"/>
+                            <input type="text"  class="fm-control chosen-disabled" value="{{link.linkPid}}"/>
                         </div>
                     </li>
                     <li style="padding:5px">
                         <label>Link{{$index+1}}类型</label>
                         <div>
-                            <input type="text" readonly class="fm-control" value="{{link.tableName}}"/>
+                            <input type="text"  class="fm-control chosen-disabled" value="{{link.tableName}}"/>
                         </div>
                     </li>
                 </ul>
